--- a/templates/portfolio/project_list.html
+++ b/templates/portfolio/project_list.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
+{% load i18n %}
 
 {% block title %}Projects - Fatemeh NGP{% endblock %}
 
 {% block content %}
 <section class="page-header">
     <div class="container">
-        <h1>My Projects</h1>
-        <p>A collection of my work and contributions</p>
+        <h1>{% trans "My Projects" %}</h1>
+        <p>{% trans "A collection of my work and contributions" %}</p>
     </div>
 </section>
 
