--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% trans "Fatemeh NGP - Portfolio" %}{% endblock %}</title>
     <meta name="description" content="{% block description %}{% trans "Backend developer portfolio showcasing projects and skills" %}{% endblock %}">
-
+    <link rel="icon" href="{% static 'favicon/favicon.ico' %}" type="image/x-icon">
     <!-- CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.min.css" rel="stylesheet">
